--- a/factory_demo.html
+++ b/factory_demo.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <!-- saved from url=(0022)http://localhost:3000/ -->
-<html lang="jp"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  
+<html lang="jp">
+<head>
+  <meta name="robots" content="noindex">
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="keywords" content="">
   <meta name="description" content="">
@@ -12,7 +15,7 @@
   <link rel="stylesheet" href="./factory_demo_files/html5reset.css">
   <link rel="stylesheet" href="./factory_demo_files/allstyle.css">
   <link rel="stylesheet" href="./factory_demo_files/bootstrap.min.css">
-  
+
   <script src="./factory_demo_files/allscript.js"></script>
   <!-- jQuery library -->
   <script src="./factory_demo_files/jquery.min.js"></script>
