--- a/factory_demo.html
+++ b/factory_demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0022)http://localhost:3000/ -->
+<!-- saved from url=(0022)/ -->
 <html lang="jp">
 <head>
   <meta name="robots" content="noindex">
@@ -28,7 +28,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="factory">
 <meta property="og:description" content="">
-<meta property="og:url" content="http://localhost:3000/">
+<meta property="og:url" content="/">
 <meta property="og:site_name" content="">
 <meta property="og:image" content="">
 
@@ -69,8 +69,8 @@
 <div id="ideaWk" class="clearfix" style="display:none;">
     <header class="ideaTop">
         <div>
-          <a class="headerBackLink" href="http://localhost:3000/"></a>
-          <a href="http://localhost:3000/">FACTORY</a>
+          <a class="headerBackLink" href="/"></a>
+          <a href="/">FACTORY</a>
         </div>
     </header>
     <div class="idea-container">
@@ -108,8 +108,8 @@
 <div id="ideaConfWk" class="clearfix" style="display:none;">
     <header class="ideaTop">
       <div>
-        <a class="headerBackLink" href="http://localhost:3000/"></a>
-        <a href="http://localhost:3000/">FACTORY</a></div>
+        <a class="headerBackLink" href="/"></a>
+        <a href="/">FACTORY</a></div>
     </header>
     <div class="idea-container">
         <div>
@@ -146,8 +146,8 @@
 <div id="ideaCompWk" class="idea-comp-wk clearfix" style="display:none;">
     <header class="ideaTop">
       <div>
-        <a class="headerBackLink" href="http://localhost:3000/"></a>
-        <a href="http://localhost:3000/">FACTORY</a></div>
+        <a class="headerBackLink" href="/"></a>
+        <a href="/">FACTORY</a></div>
     </header>
     <div class="idea-con-comp">
         <div>
@@ -162,7 +162,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
@@ -196,7 +196,7 @@
     <header class="craftTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerCraftAccountLink" href="javascript:void(0);" onclick="creatorMyPage();return false;"></a>
         </div>
     </header>
@@ -264,8 +264,8 @@
 <div id="ideaLoginWk" class="clearfix" style="display:none;">
     <header class="ideaTop">
       <div>
-        <a class="headerBackLink" href="http://localhost:3000/"></a>
-        <a href="http://localhost:3000/">FACTORY</a></div>
+        <a class="headerBackLink" href="/"></a>
+        <a href="/">FACTORY</a></div>
     </header>
     <div class="idea-container">
       <div>
@@ -294,7 +294,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
@@ -403,7 +403,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;" ;=""></a>
         </div>
     </header>
@@ -484,7 +484,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
@@ -537,10 +537,10 @@
                     <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
                   </div>
                 </div>
-                <a class="left carousel-control" href="http://localhost:3000/#carousel1" role="button" data-slide="prev">
+                <a class="left carousel-control" href="/#carousel1" role="button" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 </a>
-                <a class="right carousel-control" href="http://localhost:3000/#carousel1" role="button" data-slide="next">
+                <a class="right carousel-control" href="/#carousel1" role="button" data-slide="next">
                   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 </a>
               </div>
@@ -555,7 +555,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
         </div>
     </header>
     <div class="idea-container-upload">
@@ -601,7 +601,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="" ;=""></a>
         </div>
     </header>
@@ -629,10 +629,10 @@
                     <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
                   </div>
                 </div>
-                <a class="left carousel-control" href="http://localhost:3000/#carousel1" role="button" data-slide="prev">
+                <a class="left carousel-control" href="/#carousel1" role="button" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 </a>
-                <a class="right carousel-control" href="http://localhost:3000/#carousel1" role="button" data-slide="next">
+                <a class="right carousel-control" href="/#carousel1" role="button" data-slide="next">
                   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 </a>
               </div>
@@ -674,7 +674,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick=""></a>
         </div>
     </header>
@@ -791,15 +791,15 @@
         <a href="javascript:void(0);" onclick="ideaRequestWk(2);return false;">投稿済みのアイデア</a>
         <a href="javascript:void(0);" onclick="ideaRequestWk(2);return false;">製作終了したアイデア</a>
         <a href="javascript:void(0);" onclick="ideaWkMyPage();return false;">マイページ</a>
-        <a href="http://localhost:3000/">ログアウト</a>
+        <a href="/">ログアウト</a>
     </div>
 </div>
 
 <div id="Craftman" class="clearfix" style="display:none;">
     <header class="craftTop">
         <div>
-          <a class="headerBackLink" href="http://localhost:3000/"></a>
-          <a href="http://localhost:3000/">FACTORY</a>
+          <a class="headerBackLink" href="/"></a>
+          <a href="/">FACTORY</a>
       </div>
     </header>
     <div class="craft-container">
@@ -867,8 +867,8 @@
 <div id="craftLoginWk" class="clearfix" style="display:none;">
     <header class="craftTop">
       <div>
-        <a class="headerBackLink" href="http://localhost:3000/"></a>
-        <a href="http://localhost:3000/">FACTORY</a>
+        <a class="headerBackLink" href="/"></a>
+        <a href="/">FACTORY</a>
       </div>
     </header>
     <div class="craft-container">
@@ -897,7 +897,7 @@
     <header class="craftTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerCraftAccountLink" href="javascript:void(0);" onclick="creatorMyPage();return false;"></a>
         </div>
     </header>
@@ -928,7 +928,7 @@
     <header class="craftTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="return false;"></a>
-            <a href="http://localhost:3000/">FACTORY</a>
+            <a href="/">FACTORY</a>
             <a class="headerCraftAccountLink" href="javascript:void(0);" onclick="creatorMyPage();return false;"></a>
         </div>
     </header>
@@ -959,10 +959,10 @@
                     <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
                   </div>
                 </div>
-                <a class="left carousel-control" href="http://localhost:3000/#carousel1" role="button" data-slide="prev">
+                <a class="left carousel-control" href="/#carousel1" role="button" data-slide="prev">
                   <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
                 </a>
-                <a class="right carousel-control" href="http://localhost:3000/#carousel1" role="button" data-slide="next">
+                <a class="right carousel-control" href="/#carousel1" role="button" data-slide="next">
                   <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
                 </a>
               </div>
