--- a/factory_demo.html
+++ b/factory_demo.html
@@ -69,8 +69,8 @@
 <div id="ideaWk" class="clearfix" style="display:none;">
     <header class="ideaTop">
         <div>
-          <a class="headerBackLink" href="/"></a>
-          <a href="/">FACTORY</a>
+          <a class="headerBackLink" href="https://daikimaruyam.github.io/factory_demo/factory_demo.html"></a>
+          <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
         </div>
     </header>
     <div class="idea-container">
@@ -108,8 +108,8 @@
 <div id="ideaConfWk" class="clearfix" style="display:none;">
     <header class="ideaTop">
       <div>
-        <a class="headerBackLink" href="/"></a>
-        <a href="/">FACTORY</a></div>
+        <a class="headerBackLink" href="https://daikimaruyam.github.io/factory_demo/factory_demo.html"></a>
+        <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a></div>
     </header>
     <div class="idea-container">
         <div>
@@ -146,8 +146,8 @@
 <div id="ideaCompWk" class="idea-comp-wk clearfix" style="display:none;">
     <header class="ideaTop">
       <div>
-        <a class="headerBackLink" href="/"></a>
-        <a href="/">FACTORY</a></div>
+        <a class="headerBackLink" href="https://daikimaruyam.github.io/factory_demo/factory_demo.html"></a>
+        <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a></div>
     </header>
     <div class="idea-con-comp">
         <div>
@@ -162,7 +162,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
@@ -196,7 +196,7 @@
     <header class="craftTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerCraftAccountLink" href="javascript:void(0);" onclick="creatorMyPage();return false;"></a>
         </div>
     </header>
@@ -264,8 +264,8 @@
 <div id="ideaLoginWk" class="clearfix" style="display:none;">
     <header class="ideaTop">
       <div>
-        <a class="headerBackLink" href="/"></a>
-        <a href="/">FACTORY</a></div>
+        <a class="headerBackLink" href="https://daikimaruyam.github.io/factory_demo/factory_demo.html"></a>
+        <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a></div>
     </header>
     <div class="idea-container">
       <div>
@@ -294,7 +294,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
@@ -403,7 +403,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;" ;=""></a>
         </div>
     </header>
@@ -484,7 +484,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
@@ -555,7 +555,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
         </div>
     </header>
     <div class="idea-container-upload">
@@ -601,7 +601,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="" ;=""></a>
         </div>
     </header>
@@ -674,7 +674,7 @@
     <header class="ideaTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerIdeaRegLink" href="javascript:void(0);" onclick=""></a>
         </div>
     </header>
@@ -791,15 +791,15 @@
         <a href="javascript:void(0);" onclick="ideaRequestWk(2);return false;">投稿済みのアイデア</a>
         <a href="javascript:void(0);" onclick="ideaRequestWk(2);return false;">製作終了したアイデア</a>
         <a href="javascript:void(0);" onclick="ideaWkMyPage();return false;">マイページ</a>
-        <a href="/">ログアウト</a>
+        <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">ログアウト</a>
     </div>
 </div>
 
 <div id="Craftman" class="clearfix" style="display:none;">
     <header class="craftTop">
         <div>
-          <a class="headerBackLink" href="/"></a>
-          <a href="/">FACTORY</a>
+          <a class="headerBackLink" href="https://daikimaruyam.github.io/factory_demo/factory_demo.html"></a>
+          <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
       </div>
     </header>
     <div class="craft-container">
@@ -867,8 +867,8 @@
 <div id="craftLoginWk" class="clearfix" style="display:none;">
     <header class="craftTop">
       <div>
-        <a class="headerBackLink" href="/"></a>
-        <a href="/">FACTORY</a>
+        <a class="headerBackLink" href="https://daikimaruyam.github.io/factory_demo/factory_demo.html"></a>
+        <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
       </div>
     </header>
     <div class="craft-container">
@@ -897,7 +897,7 @@
     <header class="craftTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerCraftAccountLink" href="javascript:void(0);" onclick="creatorMyPage();return false;"></a>
         </div>
     </header>
@@ -928,7 +928,7 @@
     <header class="craftTop">
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="return false;"></a>
-            <a href="/">FACTORY</a>
+            <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
             <a class="headerCraftAccountLink" href="javascript:void(0);" onclick="creatorMyPage();return false;"></a>
         </div>
     </header>
@@ -1044,7 +1044,7 @@
     }
     function ideaInputReturn(){
         if(confirm("アイデアの投稿をやめますか？")){
-            location.href="/";
+            location.href="https://daikimaruyam.github.io/factory_demo/factory_demo.html";
         }
     }
     function ideaIdeaUpdReg(type){
