--- a/factory_demo.html
+++ b/factory_demo.html
@@ -274,8 +274,8 @@
             <div>ほしいものがある方用</div>
           </div>
           <div class="idea-account-detail">
-              <div><input type="text" placeholder="パスワード（半角英数字 6〜20文字）"></div>
-              <div><input type="text" placeholder="パスワード（確認）"></div>
+              <div><input type="text" placeholder="メールアドレス"></div>
+              <div><input type="text" placeholder="パスワード（6〜20文字）"></div>
           </div>
           <div class="idea-account-login">
               <a href="javascript:void(0);" onclick="ideaLogin(1);return false;">ログイン</a>
@@ -499,16 +499,16 @@
             <div class="ideaCDetRetLink">
                 <a href="javascripf:void(0);" onclick="">＜ 職人一覧に戻る</a>
             </div>
-            <div class="ideaCDetName">えいしろうスタイル</div>
+            <div class="ideaCDetName">丹波スタイル</div>
             <div class="ideaCDetPic">
-                <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png">
+                <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/236/tanba-81.jpg">
             </div>
             <div class="ideaCDetDetTit">基本情報</div>
-            <div class="ideaCDetDetDet">会社名（屋号）：</div>
-            <div class="ideaCDetDetDet">所在地：</div>
-            <div class="ideaCDetDetDet">電話：</div>
-            <div class="ideaCDetDetDet">設立：</div>
-            <div class="ideaCDetDetDet">代表者名：</div>
+            <div class="ideaCDetDetDet">会社名（屋号）：TANBA STYLE</div>
+            <div class="ideaCDetDetDet">所在地：篠山市今田町上立杭330</div>
+            <div class="ideaCDetDetDet">電話：03-0000-00000</div>
+            <div class="ideaCDetDetDet">設立：1985年6月</div>
+            <div class="ideaCDetDetDet">代表者名：山宮　建造</div>
             <div class="ideaCDetDetTit">カテゴリ</div>
             <div class="ideaCDetDetDet">陶磁器</div>
             <div class="ideaCDetDetTit">特徴・こだわり</div>
@@ -528,13 +528,13 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                   <div class="item">
-                    <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
+                    <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/236/tanba-81.jpg" alt="">
                   </div>
                   <div class="item">
-                    <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
+                    <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/241/tanba-70.jpg" alt="">
                   </div>
                   <div class="item active">
-                    <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
+                    <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/236/tanba-81.jpg" alt="">
                   </div>
                 </div>
                 <a class="left carousel-control" href="/#carousel1" role="button" data-slide="prev">
@@ -602,7 +602,7 @@
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
             <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
-            <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="" ;=""></a>
+            <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
     <div class="idea-container-upd-reg">
@@ -620,13 +620,13 @@
                 </ol>
                 <div class="carousel-inner" role="listbox">
                   <div class="item">
-                    <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
+                    <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/238/tanba-76.jpg" alt="">
                   </div>
                   <div class="item">
-                    <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
+                    <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/238/tanba-76.jpg" alt="">
                   </div>
                   <div class="item active">
-                    <img src="./factory_demo_files/89eeabc8-ea21-4574-8573-440cc671774a_2.png" alt="">
+                    <img src="https://craft-neworld-production2.s3.amazonaws.com/uploads/craft_image/image/238/tanba-76.jpg" alt="">
                   </div>
                 </div>
                 <a class="left carousel-control" href="/#carousel1" role="button" data-slide="prev">
@@ -675,7 +675,7 @@
         <div>
             <a class="headerHamburgerLink" href="javascript:void(0);" onclick="hamburgerModalOpen();return false;"></a>
             <a href="https://daikimaruyam.github.io/factory_demo/factory_demo.html">FACTORY</a>
-            <a class="headerIdeaRegLink" href="javascript:void(0);" onclick=""></a>
+            <a class="headerIdeaRegLink" href="javascript:void(0);" onclick="ideaReqEdit();return false;"></a>
         </div>
     </header>
     <div class="idea-container-chat">
